Fix Vertical Alignment and id nav

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ a:active,
 a:focus {
   outline: 0 !important;
   border: none !important;
-  /* -moz-outline-style: none !important; */
+  -moz-outline-style: none !important;
 } */
 
 button:hover {
@@ -34,6 +34,8 @@ button:hover {
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
   border: 1px solid rgba(255, 255, 255, 0.18);
+  display: flex;
+  align-items: center;
 }
 
 .nav-link {
